pavis13-dbs: include acknowledgments
git-svn-id: https://scivis.itn.liu.se/svn/publications/workinprogress/pavis13-dbs@4281 cd0c9ba3-fe29-0410-b0c2-9a6eeba77867

--- a/pavis13-dbs.tex
+++ b/pavis13-dbs.tex
@@ -52,25 +52,25 @@
 
 \renewcommand{\fboxsep}{0pt}
 \setlength\abovecaptionskip{0.18cm}
-\setlength\belowcaptionskip{0cm}
+\setlength\belowcaptionskip{-0.25cm}
 
 %Guiding DBS Interventions by ...
 \title{Guiding Deep Brain Stimulation Interventions \\ by Fusing Multimodal Uncertainty Regions}
 %\title{Supporting Deep Brain Stimulation Interventions \\ by Fusing Microelectrode Recordings with Imaging Data}
 
 \author{Alexander Bock\thanks{alexander.bock@liu.se} \\ %
-%	\parbox{1in}{\scriptsize \centering Scientific Visualization Group \\ 	Link\"oping University}
-	\parbox{1in}{\scriptsize \centering Link\"oping University}
+	\parbox{1in}{\scriptsize \centering Scientific Visualization Group \\ 	Link\"oping University}
+%	\parbox{1in}{\scriptsize \centering Link\"oping University}
 \and Norbert Lang\thanks{nlang@barbaraklinik.de} \\ %
 	\parbox{1in}{\scriptsize \centering St. Barbara Hospital \\ Hamm}
 \and Gianpaolo Evangelista\thanks{giaev@itn.liu.se} \\ %
-	\parbox{1in}{\scriptsize \centering Link\"oping University}
-%	\parbox{1in}{\scriptsize \centering Sound Processing Group \\ Link\"oping University}
+%	\parbox{1in}{\scriptsize \centering Link\"oping University}
+	\parbox{1in}{\scriptsize \centering Sound Technology Group \\ Link\"oping University}
 \and Ralph Lehrke\thanks{rlehrke@barbaraklinik.de} \\ %
 	\parbox{1in}{\scriptsize \centering St. Barbara Hospital \\ Hamm}
 \and Timo Ropinski\thanks{timo.ropinski@liu.se} \\ %
-	\parbox{1in}{\scriptsize \centering Link\"oping University}
-%	\parbox{1in}{\scriptsize \centering Scientific Visualization Group \\ 	Link\"oping University}
+%	\parbox{1in}{\scriptsize \centering Link\"oping University}
+	\parbox{1in}{\scriptsize \centering Scientific Visualization Group \\ 	Link\"oping University}
 }
 
 \shortauthortitle{Bock \MakeLowercase{\textit{et al.}}: DBS Visualization}
@@ -299,7 +299,7 @@ Another addition to this view is the inclusion of the intra-operative x-ray imag
 \subsubsection{2D Temporal Audio Visualization}\label{sec:overview:recording:mer}
 \begin{figure}[b]
     \centering
-    \fbox{\includegraphics[width=\columnwidth, height=0.4\columnwidth]{figures/audio_signal.png}}
+    \fbox{\includegraphics[width=0.9\columnwidth, height=0.35\columnwidth]{figures/audio_signal.png}}
     \caption{The MER signal in the time domain is shown using an oscillograph-like representation in which time is on the horizontal axis and the electric potential difference on the vertical. The visual perception of the signal is enhanced by de-emphasizing the background noise and guiding the attention to the more important spikes. The signal of the currently selected electrodes is highlighted.}
     \label{fig:recordingphase:sound}
 \end{figure}
@@ -328,7 +328,7 @@ Creating a disc for every measurement point would clutter the whole view (see in
 \subsection{Placement Phase}\label{sec:overview:placement}
 In the placement phase the surgeon needs to consider all acquired information to determine the optimal position of the stimulating electrode. This decision is based on three different factors that are all affected by varying uncertainties:
 
-First, the surgeon's experience and knowledge in selecting and segmenting the intended target region during the planning phase. The segmentation is uncertain as, for example, the brain shifts from its scanned position during the operation. There exist techniques to reduce this uncertainty and we estimate it by measuring the difference between the expected electrode position and the reconstructed position based on the x-ray images. Second, the results of the MER recording and the area along the trajectory. The uncertainty for this step is highly dependent on both the algorithm used to analyze the MER signal and the electrode configuration. The third factor is acquired when the stimulating electrode is inserted and activated. The surgical staff will test different brain functions of the patient. Since it is well-known which areas affect which capabilities while stimulated, the surgeon can further narrow down the location of the optimal target region. In our example we use two brain functions, the ability to recall events from long-term memory and an increase in tremor of the patient's hand. Each of the functions is tested separately along the access path and, based on the surgeon's experience and a patient-neutral heuristic, it is possible to deduce the position of the target region relative to the measurement point. The level of uncertainty for this information is relatively constant and in the same range as the extent of the electrodes,$< 1.5 mm$ for our setup. For each decision factor we independently measure the probability, and uncertainty, of the target region's position along the access path.
+First, the surgeon's experience and knowledge in selecting and segmenting the intended target region during the planning phase. The segmentation is uncertain as, for example, the brain shifts from its scanned position during the operation. There exist techniques to reduce this uncertainty and we estimate it by measuring the difference between the expected electrode position and the reconstructed position based on the x-ray images. Second, the results of the MER recording and the area along the trajectory. The uncertainty for this step is highly dependent on both the algorithm used to analyze the MER signal and the electrode configuration. The third factor is acquired when the stimulating electrode is inserted and activated. The surgical staff will test different brain functions of the patient. Since it is well-known which areas affect which capabilities while stimulated, the surgeon can further narrow down the location of the optimal target region. In our example we use two brain functions, the ability to recall events from long-term memory and an increase in tremor of the patient's hand. Each of the functions is tested separately along the access path and, based on the surgeon's experience and a patient-neutral heuristic, it is possible to deduce the target region's position relative to the measurement point. The level of uncertainty for this information is relatively constant and in the same range as the extent of the electrodes,$< 1.5 mm$ for our setup. For each decision factor we independently measure the probability, and uncertainty, of the target region's position along the access path.
    %To aid in this final phase, we provide the surgeon with five different linked views. In contrast to the recording phase, where there were five recording electrodes, the surgeon only inserts a single stimulating electrode in the placement step, so that only a single electrode is presented in each view.
 
 The contextual view introduced above is shown to maintain the surgeon's mental registration. Since the whole trajectory has been measured in the previous phase, however, all beads and all information previously acquired in the canal tube is presented independently of the electrode position. 
@@ -384,7 +384,7 @@ Finally, we emphasize the intersection of the displayed target regions as this i
   \label{fig:placementguide}
 \end{figure}
 
-In addition to the spatial context, as described in the previous section, we also present the potential target regions quantitatively in a view we call the \emph{placement guide}. This view is centered on the intended target region with the access path depth on the abscissa and the likelihood of the actual target region on the ordinate. By showing the quantitative data in a line plot, the surgeon immediately sees in which areas most of the measurements agree and is guided towards that position. As we have multiple decision values for each depth value, we can combine them in different ways. In our example we chose a weighted sum, but the combination function can be freely changed according to future research. The values for uncertainty are combined in the same way and are rendered as transparent areas surrounding the line. Transparency has been shown to be a good way to convey uncertainty in other contexts~\cite{Djurcilov2002239}. With this representation the size of the transparent area immediately shows how uncertain a specific value is. This lets the surgeon see the whole set of information at one time and decide on an optimal placement position. All combined views use spline-based smoothing on the curves, which can be disabled by the user. This is done so that the surgeon is not distracted by abrupt changes in the data values which would otherwise draw unwanted attention . The current position of the electrode is shown as a vertical bar in each of the views.
+In addition to the spatial context, as described in the previous section, we also present the potential target regions quantitatively in a view we call the \emph{placement guide}. This view is centered on the intended target region with the access path depth on the abscissa and the likelihood of the actual target region on the ordinate. By showing the quantitative data in a line plot, the surgeon immediately sees in which areas most of the measurements agree and is guided towards that position. As we have multiple decision values for each depth value, we can combine them in different ways. In our example we chose a weighted sum, but the combination function can be freely changed according to future research. The values for uncertainty are combined in the same way and are rendered as transparent areas surrounding the line. Transparency has been shown to be a good way to convey uncertainty in other contexts~\cite{Djurcilov2002239}. With this representation the size of the transparent area immediately shows how uncertain a specific value is. This lets the surgeon see the whole set of information at one time and decide on an optimal placement position. All combined views use spline-based smoothing on the curves, which can be disabled by the user. This is done so that the surgeon is not distracted by abrupt changes in the data values which would otherwise draw unwanted attention . The current position of the electrode is shown as a bar in each of the views.
 
 The top figure in Figure~\ref{fig:placementguide} shows the combined data of all values and is of central interest for the surgeon. It provides an overview of all measured data and guides the surgeon to the most likely, the highest, position. The curve is assembled while the stimulating electrode is being advanced and the patient checks are performed. Since the combined curve hides possible outliers and gives no feedback on the underlying values, the composition of each sample point can be examined in the top right as a bar plot that shows the probability and uncertainty for each decision factor separately. All bars are justified to the left, with their width directly relating to the measured value. As with the line plot, a transparent box shows the area of uncertain values. One bar is rendered for each source of measurements. So in our case (see Figure~\ref{fig:placementguide}) there is one bar for the segmentation, MER, and one for each of the two patient checks. Including a line alongside the combined data for each of the decision factors would clutter the view and would distract the surgeon too much, which is why we chose to add the bar plot representation. There is,however, an optional view showing those decision factors separately. Furthermore, it is possible to view all pairwise combinations of factors. Showing these auxiliary views, the surgeon can detect outliers and unexpected behavior immediately without distracting him from the main view. Toggling of these auxiliary views can become important in an operation when the surgeon, for example, notices that the patient checks of this particular patient are not as reliable as expected or detects a flaw in the segmentation. Furthermore, it can be useful to inspect the data as if one of the measurements is not considered. This inspection might lead to finding that one of the measurements is not reliable.
 
@@ -428,7 +428,7 @@ In this paper we have presented a visualization system that has been designed to
 
 In the future we would like to further improve the presented system based on the feedback we have received from the surgeons during our evaluation. We would especially like to reduce the learning curve currently necessary. Furthermore, it would be beneficial to evaluate its effectiveness in the operation theater. However, a full evaluation requires a lot of effort as it would require the system to be certified for usage in the operation theater. While the current system considers most modalities, the integration of DTI could also be considered in the future. Another source of information we would like to include is the region of the brain that is affected by the stimulation signal, the \emph{volume of tissue activated}. This would simulate the region in the brain that would be influenced by the current electrode position and could thereby function as a prediction as well as a verification tool. While we have currently focused on the recording and placement phases of the DBS intervention, we would also like to extend the system for long term horizontal studies of electrode placements. A major part of this horizontal study would be the ability to compare the measured accuracy with the outcome of the intervention. As no extensive statistics about the long term effects of varying placement positions and the applied electric fields exist, this could be valuable information for further improving DBS interventions in the future.
 
-\section*{Acknowledgements}We thank all reviewers for their fruitful comments, which helped to greatly improve this paper, and Matt Cooper for proof reading. The presented concepts have been realized using the Voreen open source visualization framework (www.voreen.org).
+\section*{Acknowledgements}We thank all reviewers for their fruitful comments and Matt Cooper for proof reading. This work was partly supported by grants from the Excellence Center at Linkšping and Lund in Information Technology (ELLIIT) and the Swedish e-Science Research Centre (SeRC), as well as VR grant 2011-4113. The presented concepts have been realized using the Voreen framework (www.voreen.org).
 
 %\section*{Acknowledgements}
 %We would like to thank all neurosurgeons which evaluated 
